--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.32.8"
+    "react-id-swiper": "^4.0.0",
+    "sass": "^1.32.8",
+    "swiper": "^6.5.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
