--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "format": "prettier --config .prettierrc.json --write '**/*.tsx'"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-id-swiper": "^4.0.0",
+    "react-redux": "^7.2.3",
     "sass": "^1.32.8",
     "swiper": "^6.5.3"
   },
