--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "dateformat": "^4.5.1",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
